# opn-chat-v1-freebuff

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.realtime  MEMORY.md  docker-compose.override.yml  docker-compose.yml  fly.api.toml  fly.realtime.toml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b3f2a1c9d8e7_timestamp_to_timestamptz.py  eaffbe057267_initial_schema.py
backend/src/api/: dependencies.py  main.py
backend/src/api/routers/: admin.py  auth.py  private_chat.py  profile.py  rooms.py  settings.py
backend/src/application/dtos/: realtime_events.py
backend/src/application/interfaces/: event_publisher.py  presence_tracker.py  repositories.py
backend/src/core/: config.py
backend/src/domain/entities/: ban.py  message.py  private_message.py  room.py  room_member.py  user.py
backend/src/domain/value_objects/: message_type.py  role.py
backend/src/infrastructure/db/: session.py
backend/src/infrastructure/realtime/: redis_event_publisher.py
backend/src/infrastructure/redis/: client.py  presence_store.py
backend/src/infrastructure/repositories/: ban_repository.py  message_repository.py  private_message_repository.py  refresh_token_repository.py  room_member_repository.py  room_repository.py  user_repository.py
backend/src/realtime/: auth.py  main.py  server.py
backend/src/realtime/namespaces/: base_namespace.py  chat_namespace.py  notifications_namespace.py  presence_namespace.py
backend/tests/: conftest.py
backend/tests/unit/: test_presence_store.py  test_redis_event_publisher.py
(+79 files in other folders)
