[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opn-chat-v2"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "google-auth>=2.29",
    "redis[hiredis]>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-socketio>=5.11",
    "slowapi>=0.1",
    "python-multipart>=0.0.9",
    "requests>=2.31",
    "httpx>=0.27",
]
realtime = [
    "python-socketio[asyncio_client]>=5.11",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "anyio>=4.3",
    "httpx>=0.27",
    "fakeredis[aioredis]>=2.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
